--- a/driver/external/dpdk-18.05/kernel/linux/Makefile
+++ b/driver/external/dpdk-18.05/kernel/linux/Makefile
@@ -3,7 +3,7 @@
 
 include $(RTE_SDK)/mk/rte.vars.mk
 
-DIRS-$(CONFIG_RTE_EAL_IGB_UIO) += igb_uio
-DIRS-$(CONFIG_RTE_KNI_KMOD) += kni
+# DIRS-$(CONFIG_RTE_EAL_IGB_UIO) += igb_uio
+# DIRS-$(CONFIG_RTE_KNI_KMOD) += kni
 
 include $(RTE_SDK)/mk/rte.subdir.mk
