--- a/driver/external/dpdk-18.05/kernel/linux/igb_uio/Makefile
+++ b/driver/external/dpdk-18.05/kernel/linux/igb_uio/Makefile
@@ -14,7 +14,7 @@ MODULE_PATH = drivers/net/igb_uio
 #
 MODULE_CFLAGS += -I$(SRCDIR) --param max-inline-insns-single=100
 MODULE_CFLAGS += -I$(RTE_OUTPUT)/include
-MODULE_CFLAGS += -Winline -Wall -Werror
+MODULE_CFLAGS += -W
 MODULE_CFLAGS += -include $(RTE_OUTPUT)/include/rte_config.h
 
 #
